--- a/styles/colors.css
+++ b/styles/colors.css
@@ -7,6 +7,7 @@
     --color-greyicons: #A8A8A8;
     --color-lightgrey: #D1D1D1;
     --color-darkgrey: #CDCDCD;
+    --color-background: #F6F7F8;
 }
 
 
