--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+:root {
+    --color-black: #000000;
+    --color-white: #FFFFFF;
+    --color-menu: #42526E;
+    --color-lightblue: #29ABE2;
+    --color-maincolor: #2A3647;
+    --color-greyicons: #A8A8A8;
+    --color-lightgrey: #D1D1D1;
+    --color-darkgrey: #CDCDCD;
+    --color-background: #F6F7F8;
+}
+
+/* Verwendungsbeispiel: 
+body {
+    background-color: var(--color-bg);
+    color: var(--color-text);
+} */
+
 * {
   margin: 0;
   box-sizing: border-box;
