--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,4 +1,4 @@
-.nav_bar_side {
+#nav_menu {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,10 +12,10 @@
 
 #logo {
     padding-top: 64px;
-    padding-bottom: 64px;
+    padding-bottom: 128px;
 }
 
-.nav_bar_side_btn {
+#nav_menu a {
     display: flex;
     align-items: center;
     width: 100%;
@@ -31,7 +31,7 @@
     text-decoration: none;
 }
 
-.nav_bar_side_bottom {
+.nav-menu-bottom-button {
     display: flex;
     flex-direction: column;
     padding-top: 243px;
