--- a/styles/login_signup.css
+++ b/styles/login_signup.css
@@ -3,9 +3,13 @@ main {
     justify-content: center;
     align-items: center;
     background-color: var(--color-background);
+    width: 100%;
 }
 
 .joinlogo {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100px;
     height: 122px;
 }
@@ -77,6 +81,12 @@ form {
 }
 
 .content-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
     max-width: 1920px;
     margin: 0 auto;
     padding: 0 1rem;
