Add font "Inter" Add border unset Login static finished

--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -1,14 +1,72 @@
+html {
+    line-height: 1.2;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
 }
-header {display: flex;
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
+.header {
+    display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--color-background);
     width: 100%;
+}
+
+.header__logoAndSignup {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 67px 122px 0px 77px;
+}
+
+.header__joinlogo {
+    width: 100px;
+    height: 122px;
+    margin-top: 13px;
+}
+
+.header__signup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    width: fit-content;
+    height: 49px;
+    align-self: flex-start;
+}
+
+.header__signup__message {
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.header__signup__signupBtn {
+    background-color: var(--color-maincolor);
+    border-radius: 8px;
+    padding: 15px 16px;
+    gap: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--color-white);
 }
 
 main {
@@ -17,31 +75,10 @@ main {
     align-items: center;
     background-color: var(--color-background);
     width: 100%;
+    height: 100vh;
 }
 
-.joinlogo {
-    width: 100px;
-    height: 122px;
-}
-
-.signup {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 35px;
-    width: fit-content;
-    height: 49px;
-}
-
-.signupBtn {
-    background-color: var(--color-maincolor);
-    border-radius: 8px;
-    padding: 15px 16px;
-    gap: 10px;
-}
-
-form {
+.form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,19 +87,94 @@ form {
     border-radius: 30px;
     padding: 48px 115px;
     gap: 32px;
-    width: 652px;
-    height: 449px;
+    width: fit-content;
+    height: fit-content;
 }
 
-.bluestrip {
-    width: 0px;
-    height: 150px;
-    border: 3px solid;
+.form__heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 16px;
+}
+
+.form__heading__h1 {
+    font-weight: 700;
+    font-size: 61px;
+    font-weight: bold;
+    color: var(--color-black);
+    width: 100%;
+    text-align: center;
+}
+
+.form__heading__bluestrip {
+    width: 150px;
+    height: 0px;
+    border-top: 3px solid;
     border-color: var(--color-lightblue);
-    rotate: 90deg
+    border-radius: 3px;
 }
 
-.btnholder {
+.form__inputfields {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 32px;
+}
+
+.form__inputfields__email-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--color-lightgrey);
+    border-radius: 10px;
+    padding: 12px 21px;
+    width: 422px;
+}
+
+.form__inputfields__email-input {
+    width: 90%;
+    height: 24px;
+    padding: 0px;
+    padding-top: 2px;
+}
+
+.form__inputfields__password-input {
+    width: 90%;
+    height: 24px;
+}
+
+input::placeholder {
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--color-lightgrey);
+}
+
+.form__inputfields__password-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--color-lightgrey);
+    border-radius: 10px;
+    padding: 12px 21px;
+    width: 422px;
+}
+
+.form__inputfields__icon__mail {
+    height: 16px;
+    width: 20px;
+}
+
+.form__inputfields__icon__lock {
+    height: 21px;
+    width: 16px;
+}
+
+.form__btnholder {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -71,32 +183,53 @@ form {
     width: 100%;
 }
 
-
 .loginBtn {
     background-color: var(--color-maincolor);
     border-radius: 8px;
     padding: 15px 24px;
-    gap: 10px;
-    height: 48px;
-    width: 110px;
+    height: 56px;
+    width: auto;
+    font-size: 21px;
+    font-weight: bold;
+    color: var(--color-white);
 }
 
 .guestloginBtn {
     background-color: var(--color-white);
-    border-radius: 8px;
     padding: 15px 24px;
-    gap: 10px;
-    height: 48px;
-    width: 177px;
+    height: 56px;
+    width: auto;
+    font-size: 21px;
+    font-weight: bold;
+    color: var(--color-maincolor);
+    border: 1px solid var(--color-maincolor);
+    border-radius: 8px;
 }
 
-.content-wrapper {
+.footer {
+    background-color: var(--color-background);
+    width: 100%;
+}
+
+.footer__privacy-legal-box {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 1920px;
-    margin: 0 auto;
-    padding: 0 1rem;
+    padding-bottom: 40px;
+    gap: 16px;
+}
+
+.footer__privacy-legal-box__link-to-privacy {
+    height: fit-content;
+    text-decoration: none;
+    color: var(--color-greyicons);
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.footer__privacy-legal-box__link-to-legal {
+    height: fit-content;
+    text-decoration: none;
+    color: var(--color-greyicons);
+    font-weight: 400;
+    font-size: 16px;
 }
