--- a/style.css
+++ b/style.css
@@ -10,10 +10,27 @@
     --color-background: #F6F7F8;
 }
 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 300 900;
+  font-display: swap;
+  src: url('/styles/font/Inter-VariableFont.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 300 900;
+  font-display: swap;
+  src: url('/styles/font/Inter-Italic-VariableFont.ttf') format('truetype');
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
+  border: unset;
 }
 
 :root {
