--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root {
-    --color-black: #000000;
-    --color-white: #FFFFFF;
-    --color-menu: #42526E;
-    --color-lightblue: #29ABE2;
-    --color-maincolor: #2A3647;
-    --color-greyicons: #A8A8A8;
-    --color-lightgrey: #D1D1D1;
-    --color-darkgrey: #CDCDCD;
-    --color-background: #F6F7F8;
+  --color-black: #000000;
+  --color-white: #FFFFFF;
+  --color-menu: #42526E;
+  --color-lightblue: #29ABE2;
+  --color-maincolor: #2A3647;
+  --color-greyicons: #A8A8A8;
+  --color-lightgrey: #D1D1D1;
+  --color-darkgrey: #CDCDCD;
+  --color-background: #F6F7F8;
 }
 
 @font-face {
@@ -38,17 +38,24 @@
 }
 
 .d-none {
-    display: none;
+  display: none;
 }
 
 .content-wrapper {
-    max-width: 1920px;
-    margin: 0 auto;
-    padding: 0 1rem;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 61px;
+  font-weight: bold;
+  color: var(--color-black);
 }
 
 h2 {
-    font-size: 32px;
-    font-weight: 700;
-    color: var(--color-black);
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--color-black);
 }
