--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -90,6 +90,22 @@ main {
     gap: 32px;
     width: fit-content;
     height: fit-content;
+    position: relative;
+}
+
+.form__arrowicon {
+    height: 32px;
+    position: absolute;
+    left: 48px;
+    top: 64px;
+    width: 32px;
+}
+
+.form__arrow-h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .form__heading {
