--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-:root {
-  --color-black: #000000;
-  --color-white: #FFFFFF;
-  --color-menu: #42526E;
-  --color-lightblue: #29ABE2;
-  --color-maincolor: #2A3647;
-  --color-greyicons: #A8A8A8;
-  --color-lightgrey: #D1D1D1;
-  --color-darkgrey: #CDCDCD;
-  --color-background: #F6F7F8;
-}
-
 @font-face {
   font-family: 'Inter';
   font-style: normal;
@@ -35,6 +23,28 @@
 
 :root {
   scroll-behavior: smooth;
+  --color-black: #000000;
+  --color-white: #FFFFFF;
+  --color-menu: #42526E;
+  --color-lightblue: #29ABE2;
+  --color-maincolor: #2A3647;
+  --color-greyicons: #A8A8A8;
+  --color-lightgrey: #D1D1D1;
+  --color-darkgrey: #CDCDCD;
+  --color-background: #F6F7F8;
+}
+
+body {
+  width: 100vw;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+}
+
+.content {
+  width: 100%;
 }
 
 .d-none {
@@ -43,7 +53,6 @@
 
 .content-wrapper {
   max-width: 1920px;
-  margin: 0 auto;
   padding: 0 1rem;
 }
 
