--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,8 +1,7 @@
-.summary_content_header {
+.summary_content__header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 326px;
     margin-top: 128px;
-    gap: 60px;
+    gap: 24px;
 }
