--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
 
 body {
   width: 100vw;
+  background-color: var(--color-background);
 }
 
 main {
@@ -67,4 +68,10 @@ h2 {
   font-size: 32px;
   font-weight: 700;
   color: var(--color-black);
+}
+
+#blue-seperator {
+  width: 4px;
+  height: 3.75rem;
+  background-color: var(--color-lightblue);
 }
