--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -18,12 +18,15 @@ body {
     width: 100%;
 }
 
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-background);
-    width: 100%;
+.btn {
+    background-color: var(--color-maincolor);
+    border-radius: 8px;
+    padding: 15px 24px;
+    font-size: 21px;
+    font-weight: bold;
+    color: var(--color-white);
+    height: 56px;
+    width: auto;
 }
 
 .header__logo-and-signup {
@@ -59,21 +62,10 @@ body {
 }
 
 .header__signup__signupBtn {
-    background-color: var(--color-maincolor);
-    border-radius: 8px;
     padding: 15px 16px;
-    gap: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: var(--color-white);
 }
 
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-background);
-    width: 100%;
     height: 100vh;
 }
 
@@ -100,10 +92,8 @@ main {
 }
 
 h1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    text-align: center;
 }
 
 .useraccess-form__heading {
@@ -113,11 +103,6 @@ h1 {
     align-items: center;
     width: 100%;
     gap: 16px;
-}
-
-h1 {
-    width: 100%;
-    text-align: center;
 }
 
 .useraccess-form__heading__bluestrip {
@@ -137,11 +122,6 @@ h1 {
     gap: 32px;
 }
 
-.useraccess-form__inputfield__input {
-    width: 90%;
-    height: 24px;
-}
-
 .useraccess-form__inputfield__wrapper {
     display: flex;
     align-items: center;
@@ -150,6 +130,11 @@ h1 {
     border-radius: 10px;
     padding: 12px 21px;
     width: 422px;
+}
+
+.useraccess-form__inputfield__input {
+    width: 90%;
+    height: 24px;
 }
 
 input::placeholder {
@@ -172,31 +157,36 @@ input::placeholder {
     width: 100%;
 }
 
-.loginBtn {
-    background-color: var(--color-maincolor);
-    border-radius: 8px;
-    padding: 15px 24px;
-    height: 56px;
-    width: auto;
-    font-size: 21px;
-    font-weight: bold;
-    color: var(--color-white);
-}
-
-.guestloginBtn {
+.guest {
     background-color: var(--color-white);
-    padding: 15px 24px;
-    height: 56px;
-    width: auto;
-    font-size: 21px;
-    font-weight: bold;
     color: var(--color-maincolor);
     border: 1px solid var(--color-maincolor);
-    border-radius: 8px;
+}
+
+.useraccess-form__privacy-policy {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3px;
+}
+
+.useraccess-form__privacy-policy__checkbox {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
+
+
+.useraccess-form__privacy-policy__infotext {
+    color: var(--color-greyicons);
+}
+
+.useraccess-form__privacy-policy__link {
+    text-decoration: none;
+    color: var(--color-lightblue);
 }
 
 .footer {
-    background-color: var(--color-background);
     width: 100%;
 }
 
@@ -207,15 +197,7 @@ input::placeholder {
     gap: 16px;
 }
 
-.footer__privacy-legal-box__link-to-privacy {
-    height: fit-content;
-    text-decoration: none;
-    color: var(--color-greyicons);
-    font-weight: 400;
-    font-size: 16px;
-}
-
-.footer__privacy-legal-box__link-to-legal {
+.footer__privacy-legal-box__links {
     height: fit-content;
     text-decoration: none;
     color: var(--color-greyicons);
