--- a/styles/summary.css
+++ b/styles/summary.css
@@ -5,3 +5,16 @@
     margin-top: 128px;
     gap: 24px;
 }
+
+.summary-content__metrics {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-top: 64px;
+}
+
+.summary-content__metrics__row {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+}
