--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -205,3 +205,10 @@ input::placeholder {
     font-weight: 400;
     font-size: 16px;
 }
+
+.footer__privacy-legal-box__links:hover {
+    color: var(--color-lightblue);
+    font-weight: 700;
+    font-weight: bold;
+    cursor: pointer;
+}
