--- a/style.css
+++ b/style.css
@@ -66,8 +66,14 @@ h1 {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 700;
+  color: var(--color-black);
+}
+
+h4 {
+  font-size: 2.9rem;
+  font-weight: 500;
   color: var(--color-black);
 }
 
