--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
 header {
     background-color: var(--color-white);
     color: black;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
 }
 
 .header__content {
