--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
   --color-lightgrey: #D1D1D1;
   --color-darkgrey: #CDCDCD;
   --color-background: #F6F7F8;
+  --color-navhover: #091931;
 }
 
 body {
