--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -36,6 +36,7 @@
     align-items: center;
     flex-direction: column;
     gap: 300px;
+    width: 100%;
 }
 
 .nav-menu-bottom-button {
@@ -47,4 +48,8 @@
 
 .nav-menu__buttons-container{
     width: 100%;
+}
+
+.nav-button-hover {
+    background-color: var(--color-navhover)!important;
 }
