add header user img and hover effects. Change size in summary-content frist line

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
   --color-darkgrey: #CDCDCD;
   --color-background: #F6F7F8;
   --color-navhover: #091931;
+  --color-headerhover: #e2e6ec;
   
 }
 
