--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@
   
 }
 
+:root {
+  --transition-fast: 75ms;
+  --transition-normal: 100ms;
+  --transition-slow: 125ms;
+}
+
 body {
   width: 100%;
   height: 100vh;
