--- a/styles/header.css
+++ b/styles/header.css
@@ -11,28 +11,28 @@ header {
     align-items: center;
 }
 
-#info-container {
+.info-container {
     display: flex;
     gap: 24px;
 }
 
-#help-img {
+.help-img {
     cursor: pointer;
-    transition: tranform 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
-#help-img:hover {
+.help-img:hover {
     transform: scale(1.2);
 }
 
-.header__content__user-info {
+.header__content--user-info {
     position: relative;
     display: inline-block;
     width: 50px;
     height: 50px;
 }
 
-.header__content__user-info img {
+.header__content--user-info img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -40,7 +40,7 @@ header {
     cursor: pointer;
 }
 
-.header__content__user-info span {
+.header__content--user-info span {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -51,11 +51,8 @@ header {
     cursor: pointer;
 }
 
-.header__content__user-info:hover img {
-    background-color: var(--color-headerhover);
-}
-
-.header__content__user-info:hover span {
+.header__content--user-info:hover img,
+.header__content--user-info:hover span {
     background-color: var(--color-headerhover);
 }
 
