--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,4 +1,4 @@
-.summary_content__header {
+.summary-content__header {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -6,7 +6,7 @@
     gap: 24px;
 }
 
-.summary_content__header span {
+.summary-content__header span {
     font-size: 1.5rem;
     font-weight: 400;
 }
@@ -27,14 +27,14 @@
     gap: 64px;
 }
 
-.summary-content__metrics__row {
+.summary-content__metrics--row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 32px;
 }
 
-.summary-content__metrics__row__box {
+.metrics__box {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -49,35 +49,35 @@
     transition: transform var(--transition-slow) ease;
 }
 
-.summary-content__metrics__row__box__top {
+.metrics__box--top {
     gap: 24px;
 }
 
-.summary-content__metrics__row__box__left {
+.metrics__box--left {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10px;
 }
 
-.summary-content__metrics__row__box__middle {
+.metrics__box--middle {
     width: 100%;
     gap: 64px;
 }
 
-.summary-content__metrics__row__box img {
+.metrics__box img {
     width: 4rem;
     height: 4rem;
     gap: 10px;
 }
 
-.summary-content__metrics__row__box__bottom {
+.metrics__box--bottom {
     padding : 38px 38px;
     height: 174px;
     width: 174px;
 }
 
-.summary-content__metrics__row__box__text {
+.metrics__box--text {
     color: var(--color-menu);
     display: flex;
     flex-direction: column;
@@ -107,19 +107,31 @@
     color: var(--color-lightblue);
 }
 
-.summary-content__metrics__row__box:hover {
+.metrics__box:hover {
     background-color: var(--color-maincolor);
     transform: scale(1.1);
     cursor: pointer;
 }
-.summary-content__metrics__row__box__top__img__to-do:hover img{
+.metrics__icon--todo:hover img{
     content: url("../assets/img/to-do-hover.svg");
 }
 
-.summary-content__metrics__row__box__top__img__done:hover img{
+.metrics__icon--done:hover img{
     content: url("../assets/img/done-hover.svg");
 }
 
-.summary-content__metrics__row__box:hover span {
+.metrics__box:hover span {
     color: var(--color-white);
+}
+
+.blue_seperator {
+  width: 4px;
+  height: 3.75rem;
+  background-color: var(--color-lightblue);
+}
+
+.grey_seperator {
+  width: 4px;
+  height: 6rem;
+  background-color: var(--color-lightgrey);
 }
