--- a/style.css
+++ b/style.css
@@ -69,14 +69,19 @@ main {
   padding: 0 4rem 0 6rem;
 }
 
-h1 {
+h1{
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+h2 {
   font-weight: 700;
   font-size: 3.75rem;
   font-weight: bold;
   color: var(--color-black);
 }
 
-h2 {
+h3 {
   font-size: 2rem;
   font-weight: 700;
   color: var(--color-black);
