--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,5 +1,6 @@
 .nav-menu {
     display: flex;
+    flex: 0 0 15rem;
     flex-direction: column;
     background-color: #2a3647;
     flex: 0 0 15rem;
