--- a/styles/help.css
+++ b/styles/help.css
@@ -1,40 +1,40 @@
-#help-content {
+.help-content {
   text-align: justify;
   margin-top: 8rem;
 }
 
-#help-content h1 {
+.help-content h2 {
   margin-bottom: 2rem;
 }
 
-#help-content h2 {
-    margin: 1.5rem 0;
+.help-content h3 {
+  margin: 1.5rem 0;
   font-size: 1.688rem;
 }
 
-#help-content p {
+.help-content p {
     margin: 0.5rem 0;
 }
 
-#help-content a {
+.help-content a {
   text-decoration: none;
 }
 
-#help-content ol {
+.help-content ol {
   list-style: none;
   counter-reset: item;
   padding-left: 0;
   margin-left: 0;
 }
 
-#help-content li {
+.help-content li {
   display: flex;
   align-items: flex-start;
   counter-increment: item;
   margin: 1rem 0;
 }
 
-#help-content li::before {
+.help-content li::before {
   content: counter(item) ".";
   font-size: 1.688rem;
   font-weight: 700;
@@ -43,17 +43,18 @@
   margin-right: 2.2rem;
 }
 
-#help-content .list-content {
+.help-content .list-content {
   display: flex;
   flex-direction: column;
 }
 
-#help-content .list-content h3 {
+.help-content .list-content h4 {
   margin: 0;
   font-size: 1.25rem;
+  font-weight: 700;
 }
 
-#help-content .list-content p {
+.help-content .list-content p {
   margin: 0;
   font-size: 1.125rem;
   text-align: justify;
