--- a/styles/privacy-policy.css
+++ b/styles/privacy-policy.css
@@ -1,26 +1,27 @@
-#data-privacy-content {
+.data-privacy-content {
     text-align: justify;
     margin-top: 8rem;
+}
+
+.data-privacy-content h2 {
     margin-bottom: 2rem;
 }
 
-#data-privacy-content h1 {
-    margin-bottom: 2rem;
-}
-
-#data-privacy-content h2 {
+.data-privacy-content h3 {
     font-size: 1.688rem;
     margin: 2rem 0;
 }
 
-#data-privacy-content h3 {
+.data-privacy-content h4 {
     margin-bottom: 1rem;
+    font-size: 1.25rem;
+    font-weight: 700;
 }
 
-#data-privacy-content h4 {
+.data-privacy-content h5 {
     font-size: 1rem;
 }
 
-#data-privacy-content p {
+.data-privacy-content p {
     margin-bottom: 1rem;
 }
