formatting code. deleted not used css and js files inside html

--- a/styles/privacy-policy.css
+++ b/styles/privacy-policy.css
@@ -25,3 +25,11 @@
 .data-privacy-content p {
     margin-bottom: 1rem;
 }
+
+.data-privacy-content ul {
+    padding-bottom: 1rem;
+}
+
+.data-privacy-content li {
+    padding: 0.25rem 0;
+}
